--- a/package.json
+++ b/package.json
@@ -2,10 +2,6 @@
   "name": "routing-app",
   "version": "0.1.0",
   "private": true,
-  "engines": {
-    "npm": "6.14.2",
-    "node": "13.3.0"
-  },
   "dependencies": {
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
@@ -22,7 +18,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "start": "node index.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
